Fix profile filtering styles on Safari

--- a/app/styles/app/layouts/profile.sass
+++ b/app/styles/app/layouts/profile.sass
@@ -197,7 +197,7 @@ p.profile-user-last
 .profile-repositories-filter
   margin-bottom: 1.5em
   .search
-    padding: 0.45em 0.4em 0.4em 2.4em
+    padding: 0 0.5em 0 2.1em
     border: 1px solid $cement-grey
     width: 40%
     border-radius: 2px
@@ -207,8 +207,14 @@ p.profile-user-last
     background: url(/images/stroke-icons/icon-filter.svg) no-repeat scroll
     background-size: auto 60%
     background-position: 0.5em center
-    height: 2.5em
-    text-align: left center
+    height: 2.1em
+    box-sizing: content-box
+    font-size: $font-size-sm
+    -webkit-appearance: none
+    -webkit-appearance: textfield
+    &::-webkit-search-decoration
+      -webkit-appearance: none
     &::placeholder
       color: rgba($cement-grey, .6)
-      font-size: $font-size-sm
+      padding: 0
+      text-indent: 0
